--- a/src/content/portfolioItem.sass
+++ b/src/content/portfolioItem.sass
@@ -2,9 +2,9 @@
 
 .portfolio-item
     flex: 0 0 100%
-    padding: $m-base $m-base
+    padding: 0 $m-base $m-base 0
     +media-breakpoint-up(sm)
-        flex: 0 0 33.33%
+        flex: 0 0 33.33%    
 
     &__content
         margin: $m-base 0
@@ -18,4 +18,5 @@
         font-weight: bold
 
     &__image 
-        max-width: 100%
+        max-height: 100%
+        width: 100%
